--- a/client/src/app/auth/forgot-password/forgot-password.component.html
+++ b/client/src/app/auth/forgot-password/forgot-password.component.html
@@ -94,7 +94,7 @@
     <p>
       Remember your password?
       <button class="sign-up-btn" (click)="backToLogin()">
-        Back to Login
+        Login 
       </button>
     </p>
   </div>
