--- a/client/src/app/auth/register/register.component.css
+++ b/client/src/app/auth/register/register.component.css
@@ -23,7 +23,9 @@ body {
 
 .auth-graphic img {
   width: 100%;
-  height: auto;
+
+  height: 90vh;
+  margin-top: 45px;
 }
 
 .auth-right {
@@ -154,7 +156,6 @@ body {
   color: #0056b3;
 }
 
-
 .lds-spinner-overlay {
   position: fixed;
   top: 0;
@@ -162,13 +163,12 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
-  backdrop-filter: blur(5px); 
+  backdrop-filter: blur(5px);
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 9999; 
+  z-index: 9999;
 }
-
 
 .lds-spinner {
   color: currentColor;
@@ -252,7 +252,6 @@ body {
     opacity: 0;
   }
 }
-
 
 @keyframes lds-spinner-delay {
   0% {
