--- a/client/src/app/components/books/book-list/book-list.component.html
+++ b/client/src/app/components/books/book-list/book-list.component.html
@@ -5,13 +5,14 @@
     <div class="booklist-container">
       <div class="search-bar">
         <p-iconField>
-          <p-inputIcon styleClass="pi pi-search" />
+          <p-inputIcon styleClass="fas fa-search" [style.color]="'#3e97ff'" />
           <input
             type="text"
             pInputText
             placeholder="Search"
             [(ngModel)]="searchQuery"
             (input)="onSearch()"
+            
           />
         </p-iconField>
       </div>
@@ -85,6 +86,7 @@
           color="primary"
           matTooltip="Add Book"
           (click)="openAddBookDialog()"
+          class="add-btn"
         >
           <mat-icon>add</mat-icon>
         </button>
