--- a/client/src/app/components/partials/header/header.component.html
+++ b/client/src/app/components/partials/header/header.component.html
@@ -6,7 +6,7 @@
   <span class="right">
     <p-button *ngIf="!isLoggedIn" label="Login" icon="pi pi-user"></p-button>
 
-    <div class="nav-btn" style="margin-right: 10px">
+    <div class="nav-btn" style="margin-right: 10px"  routerLinkActive="active">
       <button
         class="cart fa-btn"
         style="border: none"
