--- a/client/src/app/components/partials/header/header.component.css
+++ b/client/src/app/components/partials/header/header.component.css
@@ -37,6 +37,12 @@
   height: 50px;
   text-align: center;
   line-height: 50px;
+  color: #050505 !important;
+ 
+  border-color: #eef6ff !important;
+  border-radius: 50%;
+  margin: 0px 0px 0px 10px;
+
 }
 
 .profile-menu {
@@ -95,35 +101,16 @@
 }
 
 .fa-btn:hover {
-  background-color: #e0e0e0;
-  transform: scale(1.1);
+  color: #ffffff !important;
+  background-color: #3e97ff !important;
+  border-color: #3e97ff !important;
+
   transition: background-color 0.3s, transform 0.3s;
 }
 
-.notification:hover {
-  background-color: #f8f8f8;
-}
 
-.cart:hover {
-  background-color: #f8f8f8;
-}
 
-.p-button:hover {
-  background-color: #fff;
-  transform: scale(1.05);
-  transition: background-color 0.3s, transform 0.3s;
-}
-
-.pi:hover {
-  color: #007bff;
-  transition: color 0.3s ease;
-}
 
 .fa-btn:hover {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.cart:hover {
-  background-color: #f0f0f0;
-  border-radius: 50%;
 }
