--- a/client/src/app/components/partials/layout/layout.component.css
+++ b/client/src/app/components/partials/layout/layout.component.css
@@ -56,19 +56,28 @@
   margin: 15px 0 7px 10px;
   background-color: transparent;
   text-decoration: none;
-  color: black;
+  color: #181C32 !important;
+  background-color: #f2f4f6 !important;
+  /* border-color: #eef6ff !important; */
 }
 
 .side-nav-button.active {
-  background-color: #4a5b69;
-  font-weight: 600;
-  border: 2px solid #4a5b69;
-  color: white;
+  color: #2884EF !important;
+  /* background-color: #3e97ff !important; */
+  /* border-color: #3e97ff !important; */
+  background: #E6E8F0 !important;
+  border-radius: 6px !important;
+    font-weight: 600 !important;
 }
 
 .side-nav-button:hover {
-  background-color: #9da1a5;
-  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.15);
+  /* box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.15); */
+  color: #2884EF !important;
+  /* background-color: #3e97ff !important; */
+  /* border-color: #3e97ff !important; */
+  background: #E6E8F0 !important;
+  border-radius: 6px !important;
+    font-weight: 600 !important;
 }
 
 .list-group-item {
@@ -109,91 +118,3 @@
   }
 }
 
-.main-wrapper {
-  display: flex;
-  position: relative;
-}
-
-.floating-btn {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  z-index: 1000;
-}
-
-.floating-btn button {
-  width: 56px;
-  height: 56px;
-  border-radius: 50%;
-  font-size: 24px;
-}
-
-.floating-chat {
-  position: absolute;
-  bottom: 70px;
-  right: 20px;
-  background-color: #ffffff;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  width: 300px;
-  max-height: 400px;
-  overflow: hidden;
-  transition: all 0.3s ease-in-out;
-  display: flex;
-  flex-direction: column;
-}
-
-.floating-chat.expanded {
-  height: 400px;
-}
-
-.chat-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 10px;
-  background-color: #007bff;
-  color: white;
-  font-size: 16px;
-}
-
-.chat-header i {
-  cursor: pointer;
-  font-size: 16px;
-}
-
-.chat-body {
-  display: flex;
-  flex-direction: column;
-  padding: 10px;
-  height: 100%;
-  overflow-y: auto;
-}
-
-.messages {
-  flex-grow: 1;
-  margin-bottom: 10px;
-}
-
-.message {
-  padding: 5px;
-  margin: 5px 0;
-  background-color: #f1f1f1;
-  border-radius: 5px;
-}
-
-.chat-input {
-  display: flex;
-  align-items: center;
-}
-
-.chat-input input {
-  flex-grow: 1;
-  margin-right: 10px;
-}
-
-.pi-bars {
-  font-size: 18px;
-  cursor: ew-resize;
-  margin-left: 10px;
-}
