--- a/client/src/app/components/books/book-list/book-list.component.html
+++ b/client/src/app/components/books/book-list/book-list.component.html
@@ -25,7 +25,7 @@
           (click)="toggleFilter()"
           class="toggle-btn"
         >
-          <mat-icon>filter_list</mat-icon>
+        <i class="pi pi-filter me-2" ></i>
         </button>
         <div class="filter-options">
           <div style="margin-bottom: 25px">
@@ -194,10 +194,10 @@
         </th>
         <td mat-cell *matCellDef="let book">
           <button mat-button class="edit-btn" (click)="openEditDialog(book)">
-            Edit
+            <i class="pi pi-pen-to-square " ></i>
           </button>
           <button mat-button class="delete-btn" (click)="deleteBook(book._id)">
-            Delete
+            <i class="pi pi-trash " ></i>
           </button>
         </td>
       </ng-container>
@@ -348,7 +348,15 @@
                     aria-label="Report"
                     matTooltip="Report"
                   >
-                    <i class="far fa-flag me-2" style="color: #888"></i>
+                    <i class="pi pi-flag me-2" style="color: #888"></i>
+                  </button>
+                  <span></span>
+                  <button
+                    mat-icon-button
+                    aria-label="Report"
+                    matTooltip="Report"
+                  >
+                    <i class="pi pi-ellipsis-v me-2" style="color: #888"></i>
                   </button>
                   <span></span>
                 </div>
