--- a/client/src/app/components/chat-bot/chat-bot.component.html
+++ b/client/src/app/components/chat-bot/chat-bot.component.html
@@ -1,48 +1,92 @@
-<div class="floating-btn" cdkDrag>
-    <button mat-fab color="primary" (click)="onFloatingMenuClick()">
-      <i class="fas fa-headset" pBadge value="2"></i>
-    </button>
-  
-    <div
-      *ngIf="isMenuOpen"
-      class="floating-chat"
-      [class.expanded]="isMenuExpanded"
-    >
-      <div class="chat-header">
-        <span>Chat</span>
-        <i
-          class="pi pi-chevron-up"
-          (click)="onToggleExpandCollapse()"
-          style="cursor: pointer"
-        ></i>
-        <i
-          class="pi pi-bars"
-          (mousedown)="onResizeChatBox($event)"
-          style="cursor: ew-resize; margin-left: auto"
-        ></i>
+<div class="chat-bot">
+  <div *ngIf="!isChatOpened" class="initial-view">
+    <div>
+      <h1 style="margin-bottom: 0; margin-top: -10px">How can We</h1>
+      <h2 style="margin-bottom: 0; margin-top: -3px">help you</h2>
+      <h3 style="margin-bottom: 0; margin-top: -3px">
+        today?<span
+          role="img"
+          aria-label="waving hand"
+          style="
+            font-size: 4rem;
+            display: block;
+            margin-top: -10px;
+            margin-left: 10px;
+          "
+        >
+          👋
+        </span>
+      </h3>
+    </div>
+
+    <div class="top-card">
+      <div class="top-card-content">
+        <div class="avatar">
+          <i class="fas fa-robot"></i>
+        </div>
+        <div class="agent-info">
+          <h3>ChatBot</h3>
+          <p>Let me know if you have any questions!</p>
+        </div>
       </div>
-      <div class="chat-body">
-        <div class="messages">
-          <div
-            *ngFor="let message of messages"
-            [ngClass]="{'sent-message': message.sent, 'received-message': !message.sent}"
-            class="message"
-          >
-            <span>{{ message.user }}:</span> {{ message.text }}
-          </div>
-        </div>
-        <div class="chat-input">
-          <input
-            type="text"
-            pInputText
-            [(ngModel)]="value"
-            placeholder="Type a message..."
-          />
-          <button mat-button (click)="onMenuItemClick('send')">
-            <i class="pi pi-send"></i>
-          </button>
-        </div>
+
+      <div class="button-container">
+        <button
+          pButton
+          style="width: 280px"
+          label=" Chat With Us"
+          icon="pi pi-comments"
+          (click)="openChat()"
+        ></button>
       </div>
     </div>
   </div>
-  
+
+  <div *ngIf="isChatOpened" class="chat-body">
+    <div class="chat-header">
+      <button class="back-btn" (click)="closeChat()">
+        <i class="pi pi-arrow-left"></i> Back
+      </button>
+
+      <button class="three-dots-btn" (click)="toggleDropdown()">
+        <i class="pi pi-ellipsis-v"></i>
+      </button>
+
+      <div *ngIf="dropdownOpen" class="dropdown-menu">
+        <button (click)="clearChat()">Clear Chat</button>
+      </div>
+    </div>
+
+    <div class="messages">
+      <div
+        *ngFor="let message of messages"
+        [ngClass]="{
+          'sent-message': message.sent,
+          'received-message': !message.sent
+        }"
+        class="message"
+      >
+        <span>{{ message.user }}:</span> {{ message.text }}
+      </div>
+    </div>
+  </div>
+
+  <div class="bottom-card">
+    <div class="bottom-card-content">
+      <div class="icon-button">
+        <i class="pi pi-home"></i>
+        <p>Home</p>
+      </div>
+      <div class="icon-button">
+        <i class="pi pi-phone"></i>
+        <p>Contact</p>
+      </div>
+    </div>
+  </div>
+  <div *ngIf="isChatOpened" class="chat-input">
+    <input type="text" pInputText placeholder="Type a message..." />
+    <button mat-button (click)="sendMessage()">
+      <i class="pi pi-send"></i>
+    </button>
+  </div>
+</div>
