--- a/client/src/app/components/partials/layout/layout.component.css
+++ b/client/src/app/components/partials/layout/layout.component.css
@@ -29,13 +29,10 @@
   box-shadow: 2px 0 10px rgba(0, 0, 0, 0.1);
   z-index: 100;
   height: calc(100vh - 50px);
-
   flex-shrink: 0;
 }
 
 .layout {
-  /* margin-left: 10px;
-  padding: 20px; */
   background-color: #f5f5f5;
   overflow-y: auto;
   transition: margin-left 0.3s ease-in-out;
@@ -56,28 +53,22 @@
   margin: 15px 0 7px 10px;
   background-color: transparent;
   text-decoration: none;
-  color: #181C32 !important;
+  color: #181c32 !important;
   background-color: #f2f4f6 !important;
-  /* border-color: #eef6ff !important; */
 }
 
 .side-nav-button.active {
-  color: #2884EF !important;
-  /* background-color: #3e97ff !important; */
-  /* border-color: #3e97ff !important; */
-  background: #E6E8F0 !important;
+  color: #2884ef !important;
+  background: #e6e8f0 !important;
   border-radius: 6px !important;
-    font-weight: 600 !important;
+  font-weight: 600 !important;
 }
 
 .side-nav-button:hover {
-  /* box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.15); */
-  color: #2884EF !important;
-  /* background-color: #3e97ff !important; */
-  /* border-color: #3e97ff !important; */
-  background: #E6E8F0 !important;
+  color: #2884ef !important;
+  background: #e6e8f0 !important;
   border-radius: 6px !important;
-    font-weight: 600 !important;
+  font-weight: 600 !important;
 }
 
 .list-group-item {
@@ -118,3 +109,36 @@
   }
 }
 
+
+.floating-btn {
+  position: absolute;
+  bottom: 20px;  
+  right: 20px;   
+  z-index: 2000;
+  border-radius: 50%; 
+}
+
+
+.floating-btn p-button {
+  width: 60px;  
+  height: 60px; 
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+::ng-deep .p-dialog .p-dialog-header {
+  background-color: #87cefa !important;
+  padding: 10px !important;  
+}
+
+
+
+::ng-deep .p-dialog .p-dialog-content {
+  padding: 0 !important;
+}
+
+::ng-deep .p-dialog .p-dialog-footer {
+  padding: 0 !important;
+}
