--- a/client/src/app/components/user/user-list/user-list.component.html
+++ b/client/src/app/components/user/user-list/user-list.component.html
@@ -36,8 +36,8 @@
     <ng-container matColumnDef="actions">
       <th mat-header-cell  [ngStyle]="{ 'background-color': tableHeaderBgColor }" class="head" *matHeaderCellDef>Actions</th>
       <td mat-cell *matCellDef="let user">
-        <button mat-button class="edit-btn" (click)="editUser(user._id)">Edit</button>
-        <button mat-button class="delete-btn" (click)="deleteUser(user._id)">Delete</button>
+        <button mat-button class="edit-btn" (click)="editUser(user._id)"><i class="pi pi-pen-to-square " ></i></button>
+        <button mat-button class="delete-btn" (click)="deleteUser(user._id)"> <i class="pi pi-trash " ></i></button>
       </td>
     </ng-container>
 
