--- a/client/src/app/components/books/book-list/book-list.component.css
+++ b/client/src/app/components/books/book-list/book-list.component.css
@@ -11,6 +11,29 @@
 }
 
 
+.page-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+
+.body-container {
+  flex-grow: 1;  
+  margin: 10px auto;
+  overflow-y: auto;
+}
+
+
+.footer-container {
+  width: 100%;
+  /* background-color: white;  */
+  padding: 10px 0;
+  /* box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);  */
+  margin-bottom: 10px;
+}
+
+
 .delete-btn {
   color: #f1416c !important;
 }
