--- a/client/src/app/components/books/book-list/book-list.component.html
+++ b/client/src/app/components/books/book-list/book-list.component.html
@@ -94,6 +94,7 @@
     </div>
   </div>
 
+  <div class="body-container">
   <mat-card>
     <table
       mat-table
@@ -502,15 +503,18 @@
     <div *ngIf="dataSource.data.length === 0" class="no-data-message">
       No data found , try something else .
     </div>
-    <div class="mt-2">
-      <mat-paginator
-        [length]="dataSource.data.length"
-        [pageSize]="5"
-        [pageSizeOptions]="[5, 10]"
-        showFirstLastButtons
-      ></mat-paginator>
-    </div>
+   
   </mat-card>
+</div>
+
+  <div class="mt-2 mb-4 footer-container">
+    <mat-paginator
+      [length]="dataSource.data.length"
+      [pageSize]="5"
+      [pageSizeOptions]="[5, 10]"
+      showFirstLastButtons
+    ></mat-paginator>
+  </div>
 
   <p-dialog
     [(visible)]="displayDialog"
