-added grid system in booklist

--- a/client/src/app/components/books/add-book/add-book.component.html
+++ b/client/src/app/components/books/add-book/add-book.component.html
@@ -1,202 +1,231 @@
+<div class="header-container">
+  <button
+    *ngIf="currentStep === 2"
+    (click)="onPreviousClick()"
+    class="previous-button"
+  >
+    <i class="pi pi-chevron-left"></i> Previous
+  </button>
+</div>
 
-  <div class="header-container">
-    <button
-      *ngIf="currentStep === 2"
-      (click)="onPreviousClick()"
-      class="previous-button"
-    >
-      <i class="pi pi-chevron-left"></i> Previous
-    </button>
+<form [formGroup]="addBookForm" (ngSubmit)="onNextClick()">
+  <div class="p-fluid">
+    <div *ngIf="currentStep === 1">
+      <div class="p-field">
+        <label for="title">Title</label>
+        <input id="title" pInputText formControlName="title" required />
+        <small
+          *ngIf="
+            (addBookForm.get('title')?.dirty ||
+              addBookForm.get('title')?.touched) &&
+            addBookForm.get('title')?.hasError('required')
+          "
+          class="p-error"
+        >
+          Title is required
+        </small>
+      </div>
+
+      <div class="p-field">
+        <label for="author">Author</label>
+        <input id="author" pInputText formControlName="author" required />
+        <small
+          *ngIf="
+            (addBookForm.get('author')?.dirty ||
+              addBookForm.get('author')?.touched) &&
+            addBookForm.get('author')?.hasError('required')
+          "
+          class="p-error"
+        >
+          Author is required
+        </small>
+      </div>
+
+      <div class="p-field">
+        <label for="publicationYear">Publication Year</label>
+        <p-calendar
+          id="publicationYear"
+          formControlName="publicationYear"
+          [readonlyInput]="false"
+          [showIcon]="true"
+          [view]="'year'"
+          [dateFormat]="'yy'"
+          [yearNavigator]="true"
+          [yearRange]="'1900:2100'"
+          placeholder="YYYY"
+        ></p-calendar>
+
+        <small
+          *ngIf="
+            (addBookForm.get('publicationYear')?.dirty ||
+              addBookForm.get('publicationYear')?.touched) &&
+            addBookForm.get('publicationYear')?.hasError('required')
+          "
+          class="p-error"
+        >
+          Publication Year is required
+        </small>
+      </div>
+
+      <div class="p-field">
+        <label for="price">Price (100-1000$)</label>
+        <input id="price" pInputText formControlName="price" required />
+        <small
+          *ngIf="
+            (addBookForm.get('price')?.dirty ||
+              addBookForm.get('price')?.touched) &&
+            addBookForm.get('price')?.hasError('required')
+          "
+          class="p-error"
+        >
+          Price is required
+        </small>
+        <small
+          *ngIf="
+            (addBookForm.get('price')?.dirty ||
+              addBookForm.get('price')?.touched) &&
+            addBookForm.get('price')?.hasError('pattern')
+          "
+          class="p-error"
+        >
+          Price must be a valid number
+        </small>
+      </div>
+
+      <div class="p-field">
+        <label for="category">Genre</label>
+        <div class="p-radiobutton-group">
+          <p-radioButton
+            class="radio-btn"
+            name="genre"
+            value="Fiction"
+            formControlName="genre"
+            label="Fiction"
+          ></p-radioButton>
+          <p-radioButton
+            class="radio-btn"
+            name="genre"
+            value="Non-fiction"
+            formControlName="genre"
+            label="Non-fiction"
+          ></p-radioButton>
+          <p-radioButton
+            class="radio-btn"
+            name="genre"
+            value="Science"
+            formControlName="genre"
+            label="Science"
+          ></p-radioButton>
+          <p-radioButton
+            class="radio-btn"
+            name="genre"
+            value="Fantasy"
+            formControlName="genre"
+            label="Fantasy"
+          ></p-radioButton>
+        </div>
+        <small
+          *ngIf="
+            (addBookForm.get('genre')?.dirty ||
+              addBookForm.get('genre')?.touched) &&
+            addBookForm.get('genre')?.hasError('required')
+          "
+          class="p-error"
+        >
+          Genre is required
+        </small>
+      </div>
+    </div>
+
+    <div *ngIf="currentStep === 2">
+      <div class="p-field">
+        <label for="inventoryStatus">Inventory Status</label>
+        <p-dropdown
+          formControlName="inventoryStatus"
+          [options]="statuses"
+          placeholder="Select Status"
+          required
+        >
+        </p-dropdown>
+        <small
+          *ngIf="
+            (addBookForm.get('inventoryStatus')?.dirty ||
+              addBookForm.get('inventoryStatus')?.touched) &&
+            addBookForm.get('inventoryStatus')?.hasError('required')
+          "
+          class="p-error"
+        >
+          Inventory Status is required
+        </small>
+      </div>
+
+      <div class="p-field">
+        <label for="publisher">Publisher</label>
+        <input id="publisher" pInputText formControlName="publisher" required />
+        <small
+          *ngIf="
+            (addBookForm.get('publisher')?.dirty ||
+              addBookForm.get('publisher')?.touched) &&
+            addBookForm.get('publisher')?.hasError('required')
+          "
+          class="p-error"
+        >
+          Publisher is required
+        </small>
+      </div>
+
+      <div class="p-field">
+        <label for="quantity">Quantity</label>
+        <input
+          id="quantity"
+          pInputText
+          formControlName="quantity"
+          type="number"
+          required
+        />
+        <small
+          *ngIf="
+            (addBookForm.get('quantity')?.dirty ||
+              addBookForm.get('quantity')?.touched) &&
+            addBookForm.get('quantity')?.hasError('required')
+          "
+          class="p-error"
+        >
+          Quantity is required
+        </small>
+      </div>
+
+      <div class="p-field">
+        <label for="description">Description</label>
+        <textarea
+          id="description"
+          pInputTextarea
+          formControlName="description"
+          rows="3"
+          cols="20"
+        ></textarea>
+        <small
+          *ngIf="
+            (addBookForm.get('description')?.dirty ||
+              addBookForm.get('description')?.touched) &&
+            addBookForm.get('description')?.hasError('required')
+          "
+          class="p-error"
+        >
+          Description is required
+        </small>
+      </div>
+    </div>
   </div>
 
-  <form [formGroup]="addBookForm" (ngSubmit)="onNextClick()">
-    <div class="p-fluid">
-   
-      <div *ngIf="currentStep === 1">
-        <div class="p-field">
-          <label for="title">Title</label>
-          <input id="title" pInputText formControlName="title" required />
-          <small
-            *ngIf="(addBookForm.get('title')?.dirty || addBookForm.get('title')?.touched) && addBookForm.get('title')?.hasError('required')"
-            class="p-error"
-          >
-            Title is required
-          </small>
-        </div>
-
-        <div class="p-field">
-          <label for="author">Author</label>
-          <input id="author" pInputText formControlName="author" required />
-          <small
-            *ngIf="(addBookForm.get('author')?.dirty || addBookForm.get('author')?.touched) && addBookForm.get('author')?.hasError('required')"
-            class="p-error"
-          >
-            Author is required
-          </small>
-        </div>
-
-        <div class="p-field">
-          <label for="publicationYearMonth">Publication Date (Month Year)</label>
-          <p-calendar 
-            id="publicationYearMonth" 
-            formControlName="publicationYearMonth" 
-            [showIcon]="true" 
-            [view]="'month'" 
-            [dateFormat]="'mm/yy'" 
-            required
-            placeholder="Month YYYY"
-            (onSelect)="onMonthSelect($event)"
-          ></p-calendar>
-          <small 
-            *ngIf="(addBookForm.get('publicationYearMonth')?.dirty || addBookForm.get('publicationYearMonth')?.touched) && addBookForm.get('publicationYearMonth')?.hasError('required')" 
-            class="p-error">
-            Publication Date is required
-          </small>
-        </div>
-        
-        
-
-        <div class="p-field">
-          <label for="price">Price (100-1000$)</label>
-          <input id="price" pInputText formControlName="price" required />
-          <small
-            *ngIf="(addBookForm.get('price')?.dirty || addBookForm.get('price')?.touched) && addBookForm.get('price')?.hasError('required')"
-            class="p-error"
-          >
-            Price is required
-          </small>
-          <small
-            *ngIf="(addBookForm.get('price')?.dirty || addBookForm.get('price')?.touched) && addBookForm.get('price')?.hasError('pattern')"
-            class="p-error"
-          >
-            Price must be a valid number
-          </small>
-        </div>
-
-
-        <div class="p-field">
-          <label for="category">Genre</label>
-          <div class="p-radiobutton-group">
-            <p-radioButton
-              class="radio-btn"
-              name="genre"
-              value="Fiction"
-              formControlName="genre"
-              label="Fiction"
-            ></p-radioButton>
-            <p-radioButton
-              class="radio-btn"
-              name="genre"
-              value="Non-fiction"
-              formControlName="genre"
-              label="Non-fiction"
-            ></p-radioButton>
-            <p-radioButton
-              class="radio-btn"
-              name="genre"
-              value="Science"
-              formControlName="genre"
-              label="Science"
-            ></p-radioButton>
-            <p-radioButton
-              class="radio-btn"
-              name="genre"
-              value="Fantasy"
-              formControlName="genre"
-              label="Fantasy"
-            ></p-radioButton>
-          </div>
-          <small
-            *ngIf="(addBookForm.get('genre')?.dirty || addBookForm.get('genre')?.touched) && addBookForm.get('genre')?.hasError('required')"
-            class="p-error"
-          >
-            Genre is required
-          </small>
-        </div>
-      </div>
-
-  
-      <div *ngIf="currentStep === 2">
-      
-        <div class="p-field">
-          <label for="inventoryStatus">Inventory Status</label>
-          <p-dropdown
-            formControlName="inventoryStatus"
-            [options]="statuses"
-            placeholder="Select Status"
-            required
-          >
-          </p-dropdown>
-          <small
-            *ngIf="(addBookForm.get('inventoryStatus')?.dirty || addBookForm.get('inventoryStatus')?.touched) && addBookForm.get('inventoryStatus')?.hasError('required')"
-            class="p-error"
-          >
-            Inventory Status is required
-          </small>
-        </div>
-
-        <div class="p-field">
-          <label for="publisher">Publisher</label>
-          <input
-            id="publisher"
-            pInputText
-            formControlName="publisher"
-            required
-          />
-          <small
-            *ngIf="(addBookForm.get('publisher')?.dirty || addBookForm.get('publisher')?.touched) && addBookForm.get('publisher')?.hasError('required')"
-            class="p-error"
-          >
-            Publisher is required
-          </small>
-        </div>
-
-        <div class="p-field">
-          <label for="quantity">Quantity</label>
-          <input
-            id="quantity"
-            pInputText
-            formControlName="quantity"
-            type="number"
-            required
-          />
-          <small
-            *ngIf="(addBookForm.get('quantity')?.dirty || addBookForm.get('quantity')?.touched) && addBookForm.get('quantity')?.hasError('required')"
-            class="p-error"
-          >
-            Quantity is required
-          </small>
-        </div>
-
-        <div class="p-field">
-          <label for="description">Description</label>
-          <textarea
-            id="description"
-            pInputTextarea
-            formControlName="description"
-            rows="3"
-            cols="20"
-          ></textarea>
-          <small
-            *ngIf="(addBookForm.get('description')?.dirty || addBookForm.get('description')?.touched) && addBookForm.get('description')?.hasError('required')"
-            class="p-error"
-          >
-            Description is required
-          </small>
-        </div>
-      </div>
-    </div>
-
-  
-    <div align="end">
-      <button *ngIf="currentStep === 2" mat-button mat-dialog-close>
-        Cancel
-      </button>
-      <button mat-button color="primary">
-        {{ currentStep === 1 ? "Next" : "Save" }}
-      </button>
-    </div>
-  </form>
-
+  <div align="end">
+    <button *ngIf="currentStep === 2" mat-button mat-dialog-close>
+      Cancel
+    </button>
+    <button mat-button color="primary">
+      {{ currentStep === 1 ? "Next" : "Save" }}
+    </button>
+  </div>
+</form>
 
 <p-toast></p-toast>
