--- a/client/src/app/components/books/book-list/book-list.component.css
+++ b/client/src/app/components/books/book-list/book-list.component.css
@@ -10,20 +10,17 @@
   width: 100%;
 }
 
-
 .page-container {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
 }
 
-
 .body-container {
-  flex-grow: 1;  
+  flex-grow: 1;
   margin: 10px auto;
   overflow-y: auto;
 }
-
 
 .footer-container {
   width: 100%;
@@ -32,7 +29,6 @@
   /* box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);  */
   margin-bottom: 10px;
 }
-
 
 .delete-btn {
   color: #f1416c !important;
@@ -299,4 +295,55 @@ h1 {
   color: #ee1b1b;
   font-size: 16px;
   padding: 20px;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(500px, 1fr));
+  gap: 16px;
+  padding: 16px;
+}
+
+.book-card {
+  padding: 16px;
+  border-radius: 8px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.status-badge {
+  font-size: 12px;
+  border-radius: 50px;
+  padding: 5px 12px;
+  font-weight: bold;
+  display: inline-block;
+  min-width: 90px;
+  text-align: center;
+}
+
+mat-table {
+  width: 100%;
+}
+
+mat-card {
+  margin-top: 16px;
+}
+
+.toggle-container {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+  margin-top: 10px;
+}
+
+.square-toggle {
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0px !important ; 
+  font-size: 18px;
+}
+
+.square-toggle mat-icon {
+  font-size: 24px;
 }
